# proc_simulator_gui

./: README.md  todo.md
.cargo/: config.toml
.zed/: settings.json
tauri/src/: index.html  main.js  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: migrated.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs  my_def.rs  proc.rs
