[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[features]
custom-protocol = ["tauri/custom-protocol"]
