[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
color-backtrace = "0.5"
[features]
custom-protocol = ["tauri/custom-protocol"]


[profile.dev]
opt-level = 0
incremental = true


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
